[gd_scene load_steps=5 format=3 uid="uid://cg61b7so1tymk"]

[ext_resource type="Script" uid="uid://b4ruc1loxn3j1" path="res://core/game_manager.gd" id="1_xjh8w"]
[ext_resource type="PackedScene" uid="uid://culr1068gs7qi" path="res://gui/main_menu.tscn" id="2_ulge3"]
[ext_resource type="Texture2D" uid="uid://bbhcjyoq1vcaw" path="res://art/Dragu Grafit.png" id="3_8prga"]
[ext_resource type="PackedScene" uid="uid://lf0rtr4mv7pb" path="res://core/main.tscn" id="3_ulge3"]

[node name="GameManager" type="Node"]
process_mode = 3
script = ExtResource("1_xjh8w")

[node name="WhenPausedLayer" type="CanvasLayer" parent="."]
process_mode = 2

[node name="MainMenu" parent="WhenPausedLayer" instance=ExtResource("2_ulge3")]

[node name="DraguGrafit" type="Sprite2D" parent="WhenPausedLayer/MainMenu"]
position = Vector2(133, 137)
scale = Vector2(0.347656, 0.347656)
texture = ExtResource("3_8prga")

[node name="Main" parent="." instance=ExtResource("3_ulge3")]
process_mode = 1
visible = false

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
bank_paths = ["res://fmodBanks/Desktop/Master.bank"]
script = null

[connection signal="play_game" from="WhenPausedLayer/MainMenu" to="." method="_on_main_menu_play_game"]
